--- a/index.html
+++ b/index.html
@@ -1,34 +1,46 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Firebase 照片上傳示範</title>
+  <title>Login with Photo</title>
 </head>
 <body>
-  <h1>Firebase 照片上傳</h1>
+  <h1>Firebase Login with Photo</h1>
 
   <!-- 鏡頭畫面 -->
-  <video id="camera" autoplay playsinline style="width: 100%; max-width: 500px; border: 1px solid #ccc;"></video>
-  <canvas id="canvas" style="display:none;"></canvas>
-  <img id="photo" style="display:none; width:100%; max-width:500px; border:1px solid #ccc;" />
-  <button id="captureButton">拍照並上傳</button>
+  <video id="camera" autoplay playsinline width="300"></video>
+  <canvas id="snapshot" style="display: none;"></canvas>
 
-  <!-- 登入表單 -->
-  <h2>登入</h2>
+  <!-- 註冊 -->
+  <h2>Register</h2>
+  <form id="registerForm">
+    <input type="email" id="registerEmail" placeholder="Email" required />
+    <input type="password" id="registerPassword" placeholder="Password" required />
+    <button type="submit">Register</button>
+  </form>
+
+  <!-- 忘記密碼 -->
+  <h2>Forgot Password</h2>
+  <form id="resetPasswordForm">
+    <input type="email" id="resetEmail" placeholder="Email" required />
+    <button type="submit">Reset Password</button>
+  </form>
+
+  <!-- 登入 -->
+  <h2>Login</h2>
   <form id="loginForm">
     <input type="email" id="loginEmail" placeholder="Email" required />
     <input type="password" id="loginPassword" placeholder="Password" required />
-    <button type="submit">登入</button>
+    <button type="submit">Login with Photo</button>
   </form>
 
-  <button id="logoutButton" style="display:none;">登出</button>
-
+  <!-- Firebase -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-auth.js";
-    import { getStorage, ref, uploadString, getDownloadURL } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-storage.js";
+    import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-auth.js";
     import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-firestore.js";
+    import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-storage.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyDHKXK6B4MfuU5Lkr53iZXd_NAHQFicwYU",
@@ -41,83 +53,79 @@
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
-    const storage = getStorage(app);
     const db = getFirestore(app);
+    const storage = getStorage(app);
 
-    const video = document.getElementById("camera");
-    const canvas = document.getElementById("canvas");
-    const photo = document.getElementById("photo");
-    const captureButton = document.getElementById("captureButton");
+    const video = document.getElementById('camera');
+    const canvas = document.getElementById('snapshot');
 
-    async function startCamera() {
-      try {
-        const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-        video.srcObject = stream;
-      } catch (err) {
-        console.error("無法啟用鏡頭:", err);
-      }
+    // 開啟鏡頭
+    navigator.mediaDevices.getUserMedia({ video: true })
+      .then(stream => video.srcObject = stream)
+      .catch(err => console.error("Camera error:", err));
+
+    // 拍照
+    function takePhoto() {
+      const context = canvas.getContext('2d');
+      canvas.width = video.videoWidth;
+      canvas.height = video.videoHeight;
+      context.drawImage(video, 0, 0, canvas.width, canvas.height);
+      return canvas.toDataURL('image/jpeg');
     }
-    startCamera();
 
+    // 註冊
+    document.getElementById("registerForm").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const email = document.getElementById("registerEmail").value;
+      const password = document.getElementById("registerPassword").value;
+      try {
+        await createUserWithEmailAndPassword(auth, email, password);
+        alert("Registered successfully!");
+      } catch (error) {
+        alert("Registration failed: " + error.message);
+      }
+    });
+
+    // 忘記密碼
+    document.getElementById("resetPasswordForm").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const email = document.getElementById("resetEmail").value;
+      try {
+        await sendPasswordResetEmail(auth, email);
+        alert("Password reset email sent!");
+      } catch (error) {
+        alert("Reset failed: " + error.message);
+      }
+    });
+
+    // 登入 & 拍照上傳
     document.getElementById("loginForm").addEventListener("submit", async (e) => {
       e.preventDefault();
       const email = document.getElementById("loginEmail").value;
       const password = document.getElementById("loginPassword").value;
+      const photoDataURL = takePhoto();
+      const blob = await (await fetch(photoDataURL)).blob();
+      
       try {
-        await signInWithEmailAndPassword(auth, email, password);
-        alert("登入成功！");
+        const userCredential = await signInWithEmailAndPassword(auth, email, password);
+        const uid = userCredential.user.uid;
+
+        const photoRef = ref(storage, `photos/${uid}/${Date.now()}.jpg`);
+        await uploadBytes(photoRef, blob);
+        const photoURL = await getDownloadURL(photoRef);
+
+        await addDoc(collection(db, "loginPhotos"), {
+          uid: uid,
+          email: email,
+          photoURL: photoURL,
+          timestamp: new Date()
+        });
+
+        alert("Login & photo uploaded!");
+        window.location.href = "dashboard.html";
+
       } catch (error) {
-        alert("登入失敗：" + error.message);
-      }
-    });
-
-    document.getElementById("logoutButton").addEventListener("click", async () => {
-      await signOut(auth);
-      alert("已登出");
-      document.getElementById("logoutButton").style.display = "none";
-    });
-
-    onAuthStateChanged(auth, (user) => {
-      if (user) {
-        document.getElementById("logoutButton").style.display = "block";
-      } else {
-        document.getElementById("logoutButton").style.display = "none";
-      }
-    });
-
-    captureButton.addEventListener("click", async () => {
-      const context = canvas.getContext("2d");
-      canvas.width = video.videoWidth;
-      canvas.height = video.videoHeight;
-      context.drawImage(video, 0, 0, canvas.width, canvas.height);
-
-      const imageData = canvas.toDataURL("image/png");
-      photo.src = imageData;
-      photo.style.display = "block";
-
-      const user = auth.currentUser;
-
-      if (user) {
-        try {
-          const imageRef = ref(storage, `photos/${user.uid}_${Date.now()}.png`);
-          await uploadString(imageRef, imageData, 'data_url');
-
-          const downloadURL = await getDownloadURL(imageRef);
-
-          await addDoc(collection(db, "photos"), {
-            uid: user.uid,
-            email: user.email,
-            imageUrl: downloadURL,
-            timestamp: new Date()
-          });
-
-          alert("照片上傳成功！");
-        } catch (error) {
-          console.error("上傳失敗：", error);
-          alert("上傳失敗：" + error.message);
-        }
-      } else {
-        alert("請先登入才能上傳照片！");
+        alert("Login failed: " + error.message);
       }
     });
   </script>
