--- a/index.html
+++ b/index.html
@@ -3,40 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Firebase Authentication Demo</title>
+  <title>Firebase Authentication & Camera</title>
 </head>
 <body>
-  <h1>Firebase Authentication Demo</h1>
-
-  <!-- 顯示鏡頭 -->
-  <video id="camera" autoplay playsinline style="width: 100%; max-width: 500px; border: 1px solid #ccc;"></video>
-
-  <!-- 拍攝按鈕 -->
-  <button id="capture">Capture Photo</button>
-
-  <!-- 顯示拍攝的照片 -->
-  <canvas id="canvas" style="display: none;"></canvas>
-  <img id="photo" style="display: none; width: 100%; max-width: 500px; border: 1px solid #ccc;"/>
-
+  <h1>Firebase Authentication & Camera Upload</h1>
   
-  <!-- 顯示錯誤訊息 -->
-  <div id="error" style="color: red; margin-top: 10px;"></div>
-
-  <script>
-    // 啟用攝影機
-    async function startCamera() {
-      try {
-        const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-        document.getElementById("camera").srcObject = stream;
-      } catch (err) {
-        document.getElementById("error").textContent = "Unable to access the camera: " + err.message;
-      }
-    }
-    startCamera();
-  </script>
-
-  
-
   <!-- 註冊表單 -->
   <h2>Register</h2>
   <form id="registerForm">
@@ -53,90 +24,82 @@
     <button type="submit">Login</button>
   </form>
 
-  <!-- 忘記密碼表單 -->
+  <!-- 忘記密碼 -->
   <h2>Forgot Password</h2>
   <form id="resetPasswordForm">
     <input type="email" id="resetEmail" placeholder="Email" required />
     <button type="submit">Reset Password</button>
   </form>
 
-  <!-- Firebase 設定與認證 -->
+  <!-- 攝影機預覽 -->
+  <h2>Camera</h2>
+  <video id="camera" autoplay playsinline style="width: 100%; max-width: 500px; border: 1px solid #ccc;"></video>
+  <button id="captureBtn">Capture Photo</button>
+  <canvas id="canvas" style="display: none;"></canvas>
+
   <script type="module">
-    // Firebase SDK 引入
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
     import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-auth.js";
 
-    // Firebase 設定
     const firebaseConfig = {
       apiKey: "AIzaSyDHKXK6B4MfuU5Lkr53iZXd_NAHQFicwYU",
       authDomain: "project-7644097720177189571.firebaseapp.com",
       projectId: "project-7644097720177189571",
       storageBucket: "project-7644097720177189571.appspot.com",
       messagingSenderId: "846914787197",
-      appId: "1:846914787197:web:77e4d7650972e84b5e5e14",
-      measurementId: "G-Z8HE1CD728"
+      appId: "1:846914787197:web:77e4d7650972e84b5e5e14"
     };
 
-    // 初始化 Firebase
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    // 登入使用者
+    document.getElementById("registerForm").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const email = document.getElementById("registerEmail").value;
+      const password = document.getElementById("registerPassword").value;
+      try {
+        await createUserWithEmailAndPassword(auth, email, password);
+        alert("Registration successful!");
+      } catch (error) {
+        alert("Registration failed: " + error.message);
+      }
+    });
+
     document.getElementById("loginForm").addEventListener("submit", async (e) => {
       e.preventDefault();
       const email = document.getElementById("loginEmail").value;
       const password = document.getElementById("loginPassword").value;
-
       try {
-        const userCredential = await signInWithEmailAndPassword(auth, email, password);
+        await signInWithEmailAndPassword(auth, email, password);
         alert("Login successful!");
-
-        // 顯示登入成功訊息
-        console.log("User Logged In:", userCredential.user);
-
-        // 登入成功後跳轉至 dashboard
-        window.location.href = "dashboard.html"; // 成功後轉到 Dashboard
+        window.location.href = "dashboard.html"; // 🔥 這一行是跳轉到 dashboard.html
       } catch (error) {
         alert("Login failed: " + error.message);
-        console.error(error);
       }
     });
 
-     // 🔹 攝影機功能
-    const video = document.getElementById("camera");
-    const canvas = document.getElementById("canvas");
-    const photo = document.getElementById("photo");
-    const captureButton = document.getElementById("capture");
+    document.getElementById("resetPasswordForm").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const email = document.getElementById("resetEmail").value;
+      try {
+        await sendPasswordResetEmail(auth, email);
+        alert("Password reset email sent!");
+      } catch (error) {
+        alert("Failed to send password reset email: " + error.message);
+      }
+    });
 
+    // 啟用攝影機
+    const video = document.getElementById("camera");
     async function startCamera() {
       try {
         const stream = await navigator.mediaDevices.getUserMedia({ video: true });
         video.srcObject = stream;
       } catch (err) {
-        alert("無法存取攝影機: " + err.message);
+        console.error("Error accessing camera:", err.message);
       }
     }
-
     startCamera();
-
-     // ✅ 拍照並上傳
-    document.getElementById('captureBtn').addEventListener('click', async () => {
-      const canvas = document.createElement('canvas');
-      canvas.width = video.videoWidth;
-      canvas.height = video.videoHeight;
-      canvas.getContext('2d').drawImage(video, 0, 0);
-
-      const blob = await new Promise(resolve => canvas.toBlob(resolve, 'image/jpeg'));
-
-      const user = auth.currentUser;
-      if (user) {
-        const storageRef = ref(storage, `photos/${user.uid}_${Date.now()}.jpg`);
-        await uploadBytes(storageRef, blob);
-        alert('照片已上傳成功！');
-      } else {
-        alert('請先登入！');
-      }
-    });
   </script>
 </body>
 </html>
