--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <video id="camera" autoplay playsinline style="width: 100%; max-width: 500px; border: 1px solid #ccc;"></video>
   <button id="captureBtn">Capture Photo</button>
   <canvas id="canvas" style="display: none;"></canvas>
+  <img id="uploadedImage" style="display: none; max-width: 500px; margin-top: 10px;" />
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
@@ -91,6 +92,10 @@
 
     // 啟用攝影機
     const video = document.getElementById("camera");
+    const canvas = document.getElementById("canvas");
+    const captureBtn = document.getElementById("captureBtn");
+    const uploadedImage = document.getElementById("uploadedImage");
+
     async function startCamera() {
       try {
         const stream = await navigator.mediaDevices.getUserMedia({ video: true });
@@ -100,6 +105,34 @@
       }
     }
     startCamera();
+
+    // 拍照並上傳到 Cloudinary
+    captureBtn.addEventListener("click", async () => {
+      const context = canvas.getContext("2d");
+      canvas.width = video.videoWidth;
+      canvas.height = video.videoHeight;
+      context.drawImage(video, 0, 0, canvas.width, canvas.height);
+      const imageData = canvas.toDataURL("image/png");
+      
+      // 將圖片上傳到 Cloudinary
+      const formData = new FormData();
+      formData.append("file", imageData);
+      formData.append("upload_preset", "ycdwf17x"); // 你的 Cloudinary upload_preset
+      
+      try {
+        const response = await fetch("https://api.cloudinary.com/v1_1/dqkjvynfx/image/upload", {
+          method: "POST",
+          body: formData
+        });
+        const data = await response.json();
+        uploadedImage.src = data.secure_url;
+        uploadedImage.style.display = "block";
+        alert("Upload successful! URL: " + data.secure_url);
+      } catch (error) {
+        console.error("Upload error:", error);
+        alert("Upload failed!");
+      }
+    });
   </script>
 </body>
 </html>
