--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
   measurementId: "G-Z8HE1CD728"
     };
 
-
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
@@ -54,6 +53,19 @@
     }
     startCamera();
 
+    // ✅ base64 轉 blob 函式
+    function dataURLtoBlob(dataurl) {
+      const arr = dataurl.split(',');
+      const mime = arr[0].match(/:(.*?);/)[1];
+      const bstr = atob(arr[1]);
+      let n = bstr.length;
+      const u8arr = new Uint8Array(n);
+      while(n--) {
+        u8arr[n] = bstr.charCodeAt(n);
+      }
+      return new Blob([u8arr], { type: mime });
+    }
+
     document.getElementById("registerAndUploadForm").addEventListener("submit", async (e) => {
       e.preventDefault();
       const email = document.getElementById("registerEmail").value;
@@ -71,8 +83,11 @@
         context.drawImage(video, 0, 0, canvas.width, canvas.height);
         const imageData = canvas.toDataURL("image/png");
 
+        // ✅ 將 base64 圖片轉為 Blob
+        const imageBlob = dataURLtoBlob(imageData);
+
         const formData = new FormData();
-        formData.append("file", imageData);
+        formData.append("file", imageBlob);
         formData.append("upload_preset", "ycdwf17x"); 
 
         const response = await fetch("https://api.cloudinary.com/v1_1/dqkjvynfx/image/upload", {
